--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,34 +13,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-28 Wed 10:37]
+#+CAPTION: Clock summary at [2016-09-28 Wed 11:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:18* |       |      | 100.0 |
+| *Total time*                                                                | *18:18* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:18   |       |      | 100.0 |
-| Active                                                                      |         | 17:18 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.7 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  14.5 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.9 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  10.2 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   2.1 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.8 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   4.7 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.6 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   3.6 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   2.2 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   8.3 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.0 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   8.3 |
+| Stories                                                                     | 18:18   |       |      | 100.0 |
+| Active                                                                      |         | 18:18 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.6 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  13.7 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.8 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   9.7 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   2.0 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.7 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   4.5 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.5 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   3.4 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   2.1 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   7.8 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.9 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   7.8 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.5 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.4 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |  12.0 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   3.5 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   8.9 |
-| STARTED Hook formattables into formatters                                   |         |       | 1:03 |   6.1 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |  11.4 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   3.3 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   8.4 |
+| STARTED Hook formattables into formatters                                   |         |       | 2:03 |  11.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -476,6 +476,9 @@ container for all formattables that also has these properties.
   simply assembles model. Formattables workflow hooks them together.
 
 *** STARTED Hook formattables into formatters                         :story:
+    CLOCK: [2016-09-28 Wed 11:17]--[2016-09-28 Wed 11:38] =>  0:21
+    CLOCK: [2016-09-28 Wed 11:01]--[2016-09-28 Wed 11:16] =>  0:15
+    CLOCK: [2016-09-28 Wed 10:36]--[2016-09-28 Wed 11:00] =>  0:24
     CLOCK: [2016-09-28 Wed 09:32]--[2016-09-28 Wed 10:35] =>  1:03
 
 Find a way to format out of the formattables container, side-by-side
