--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,34 +13,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-28 Wed 12:17]
+#+CAPTION: Clock summary at [2016-09-28 Wed 21:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:55* |       |      | 100.0 |
+| *Total time*                                                                | *20:13* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:55   |       |      | 100.0 |
-| Active                                                                      |         | 18:55 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.3 |
+| Stories                                                                     | 20:13   |       |      | 100.0 |
+| Active                                                                      |         | 20:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.6 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  13.2 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.8 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   9.3 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.9 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.7 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   4.3 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.4 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   3.3 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   2.0 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   7.6 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.9 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   7.6 |
-| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.4 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.3 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |  11.0 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   3.2 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   8.1 |
-| STARTED Hook formattables into formatters                                   |         |       | 2:40 |  14.1 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  12.4 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.6 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   8.7 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.8 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.6 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   4.0 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.2 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   3.1 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.9 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   7.1 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.8 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   7.1 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.3 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.2 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |  10.3 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   3.0 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   7.6 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  19.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -475,7 +475,9 @@ container for all formattables that also has these properties.
 - create a model factory and a formattables factory. Model factory
   simply assembles model. Formattables workflow hooks them together.
 
-*** STARTED Hook formattables into formatters                         :story:
+*** COMPLETED Hook formattables into formatters                       :story:
+    CLOSED: [2016-09-28 Wed 21:38]
+    CLOCK: [2016-09-28 Wed 20:20]--[2016-09-28 Wed 21:38] =>  1:18
     CLOCK: [2016-09-28 Wed 11:39]--[2016-09-28 Wed 12:16] =>  0:37
     CLOCK: [2016-09-28 Wed 11:17]--[2016-09-28 Wed 11:38] =>  0:21
     CLOCK: [2016-09-28 Wed 11:01]--[2016-09-28 Wed 11:16] =>  0:15
@@ -488,6 +490,11 @@ with the current formatting workflow.
 - remove element annotations from context, use element configuration
   instead.
 - create a new formatters workflow that uses formattables.
+
+*** Move enabled formatters to element configuration                  :story:
+
+At present we have =enabled_formatters= at the formatter level. This
+should be at the element level.
 
 *** Consider supplying element configuration as a parameter           :story:
 
