--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-28 Wed 22:49]
+#+CAPTION: Clock summary at [2016-09-28 Wed 22:55]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *21:22* |       |      | 100.0 |
+| *Total time*                                                                | *21:26* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 21:22   |       |      | 100.0 |
-| Active                                                                      |         | 21:22 |      | 100.0 |
+| Stories                                                                     | 21:26   |       |      | 100.0 |
+| Active                                                                      |         | 21:26 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.5 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  11.7 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.6 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   8.3 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   8.2 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.7 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.5 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.8 |
@@ -37,11 +37,12 @@
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.7 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.2 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.2 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.8 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.7 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.8 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   7.2 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  18.6 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  18.5 |
 | COMPLETED Remove include builder legacy classes                             |         |       | 1:09 |   5.4 |
+| STARTED Remove formatter id                                                 |         |       | 0:04 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -517,9 +518,13 @@ Includes:
 
 - repositories, repository factories in formattables, annotations.
 
-*** Remove formatter id                                               :story:
+*** STARTED Remove formatter id                                       :story:
+    CLOCK: [2016-09-28 Wed 22:49]--[2016-09-28 Wed 22:53] =>  0:04
 
 Not clear why we need this given we have formatter name.
+
+Actually this requires a little bit of thinking as we use the id's in
+the helper formatters.
 
 *** Move enabled formatters to element configuration                  :story:
 
