--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,35 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-28 Wed 22:55]
+#+CAPTION: Clock summary at [2016-09-29 Thu 09:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *21:26* |       |      | 100.0 |
+| *Total time*                                                                | *22:00* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 21:26   |       |      | 100.0 |
-| Active                                                                      |         | 21:26 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.8 |
+| Stories                                                                     | 22:00   |       |      | 100.0 |
+| Active                                                                      |         | 22:00 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.5 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  11.7 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.6 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   8.2 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  11.4 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.5 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   8.0 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.7 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.5 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.8 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.1 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.9 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.8 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.7 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.4 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.7 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.0 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.8 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.7 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.5 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.8 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.7 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.5 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.2 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.2 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.7 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.8 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   7.2 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  18.5 |
-| COMPLETED Remove include builder legacy classes                             |         |       | 1:09 |   5.4 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.1 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.5 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.7 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   7.0 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  18.0 |
+| COMPLETED Remove include builder legacy classes                             |         |       | 1:09 |   5.2 |
+| STARTED Review main classes in quilt.cpp                                    |         |       | 0:34 |   2.6 |
 | STARTED Remove formatter id                                                 |         |       | 0:04 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -517,6 +518,12 @@ Merged stories:
 Includes:
 
 - repositories, repository factories in formattables, annotations.
+
+*** STARTED Review main classes in quilt.cpp                          :story:
+    CLOCK: [2016-09-29 Thu 09:07]--[2016-09-29 Thu 09:41] =>  0:34
+
+After the large refactor we probably ended up with a lot of loose ends
+in quilt.cpp. Do a cursory review of the code.
 
 *** STARTED Remove formatter id                                       :story:
     CLOCK: [2016-09-28 Wed 22:49]--[2016-09-28 Wed 22:53] =>  0:04
